# BlazeInfer

./: .gitignore  LICENSE  README  README.md  pyproject.toml
blazeinfer/: generate.py  main.py
blazeinfer/executor/: model_executor.py
docs/: version_0.md
